cmake_minimum_required(VERSION 3.11)

add_subdirectory(basicJointForce)
add_subdirectory(basicJointVelocity)
add_subdirectory(basicJointPosition)

add_subdirectory(basicMove)
add_subdirectory(communication)
add_subdirectory(networkManager)
add_subdirectory(election)
add_subdirectory(task-distribution)
add_subdirectory(distribution-simple)
add_subdirectory(distribution-memory)
